<?xml version="1.0"?>
<package format="2">
  <name>turtlepi_interfaces</name>
  <version>0.0.0</version>
  <description>The turtlepi_interfaces package</description>
  <maintainer email="tasuku@gmail.com">tasuku</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
