<?xml version="1.0"?>
<package format="2">
  <name>turtlepi_navigate</name>
  <version>0.0.0</version>
  <description>The turtlepi_navigate package</description>
  <maintainer email="tasuku@gmail.com">tasuku</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>turtlepi_interfaces</depend>
  <depend>costmap_2d</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf</depend>
  <depend>roscpp</depend>
</package>
